<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastian.weatherapp.MainActivity">

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/checkWeatherBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/check_weather"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/weatherImg"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkWeatherBtn"/>



    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/weatherImg"
        android:layout_below="@+id/checkWeatherBtn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_margin="20dp"/>

    <TextView android:id="@+id/condition_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_below="@id/city_name"/>

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_name"
        android:layout_toRightOf="@+id/condition_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/pressure_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/condition"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/pressure"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/condition"
        android:layout_toRightOf="@+id/pressure_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/wind_speed_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressure"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/wind_speed"/>

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressure"
        android:layout_toRightOf="@+id/wind_speed_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/humidity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wind_speed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/humidity"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wind_speed"
        android:layout_toRightOf="@id/humidity_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/temperature_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/temperature"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_toRightOf="@+id/temperature_txt"
        android:layout_marginLeft="5dp"/>

</RelativeLayout>

